auto-test/tests/chapter_18/invalid_types/extra_credit/union_type_declarations/union_self_reference.c
union u {
    int i;
    union u self; 
};

int main(void) {
    return 0;
}